--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,30 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+builds/
+
 # C extensions
 *.so
+
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
 # Distribution / packaging
 .Python
